// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`allows a file to be empty: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/empty-file.tst.ts

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Duration:   <<timestamp>>

Ran test files matching 'empty-file'.
"
`;

exports[`allows a file to have only an empty describe: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/empty-describe.tst.ts
  parent
    empty describe

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Duration:   <<timestamp>>

Ran test files matching 'empty-describe'.
"
`;

exports[`allows a file to have only empty tests: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/empty-test.tst.ts
  parent
    empty describe
  + empty test

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      1 passed, 1 total
Duration:   <<timestamp>>

Ran test files matching 'empty-test'.
"
`;

exports[`allows a file to have only skipped tests: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/skip-file.tst.ts
  is skipped describe?
    - skip is skipped?

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      1 skipped, 1 total
Duration:   <<timestamp>>

Ran test files matching 'skip-file'.
"
`;

exports[`allows a file to have only todo tests: stdout 1`] = `
"uses TypeScript <<version>> with ./tsconfig.json

pass ./__typetests__/todo-file.tst.ts
  have todo this
    - todo at some point
  - todo and this one

Targets:    1 passed, 1 total
Test files: 1 passed, 1 total
Tests:      2 todo, 2 total
Duration:   <<timestamp>>

Ran test files matching 'todo-file'.
"
`;
